Added Square Button, Complicated Buttons and Wire Placement cheat sheets. Added Wire Placement manual page Fixed Sea Shells confusion with cheat sheet that spelled out button positions. Getting ready to add Elias' cheat sheet for Microcontrollers.

--- a/Separate Pages/Battleship interactive (Samfun123).html
+++ b/Separate Pages/Battleship interactive (Samfun123).html
@@ -17,6 +17,7 @@
 					controls = false
 				} else {
 					$(".alt-controls").prop("checked", controls == "true")
+					controls = (controls == "true")
 				}
 
 				var grid = $(".grid")
@@ -429,7 +430,9 @@
 				})
 
 				$("input.alt-controls").click(function() {
+					console.log(controls)
 					controls = $(this).prop("checked")
+					console.log(controls)
 					localStorage.setItem("alt-controls", controls.toString())
 				})
 
